ARROW-1357: [Python] Account for chunked arrays when converting lists back to pandas form

Author: Wes McKinney <wes.mckinney@twosigma.com>

Closes #979 from wesm/ARROW-1357 and squashes the following commits:

8318a121 [Wes McKinney] Use PyLong_FromLongLong so Windows is happy
18acdd91 [Wes McKinney] Account for chunked arrays when converting lists back to pandas form